<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">The Guide\'s Grand Adventure</string>
    <string name="placeholder_string">Temporary String</string>
    <string name="jose_g">Jose G.</string>
    <string name="jrgg1" tools:ignore="Typos">Jrgg1</string>
    <string name="willclfrd">WillClfrd</string>
    <string name="back">Back</string>
    <string name="this_is_a_content_description">This is a content description.</string>
    <string name="sounds_from">Sounds from:</string>
    <string name="music_from">Music From:</string>
    <string name="graphics_from">Graphics from:</string>
    <string name="mea08">Mea08</string>
    <string name="meagan_b">Meagan B.</string>
    <string name="special_thanks_to">SPECIAL THANKS TO:</string>
    <string name="stop_crying_android">Stop crying android.</string>
    <string name="this_is_an_up_arrow">This is an up arrow.</string>
    <string name="this_is_a_left_arrow">This is a left arrow.</string>
    <string name="this_is_a_down_arrow">This is a down arrow.</string>
    <string name="this_is_a_right_arrow">This is a right arrow.</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="main_menu">Main Menu</string>
    <string name="new_game">New Game</string>
    <string name="new_highscore">New Highscore!</string>
    <string name="type_your_name_below">Type your name below:</string>
    <string name="enter_name">Enter Name</string>
    <string name="this_will_enter_the_users_data_to_the_leaderboard">This will enter the users data to the leaderboard.</string>
    <string name="leaderboard_colon">LEADERBOARD:</string>
    <string name="back_button">Back</string>
    <string name="background_image_of_the_main_menu">Background Image of the main menu.</string>
    <string name="settings">SETTINGS</string>
    <string name="credits">CREDITS</string>
    <string name="start">START</string>
    <string name="image_background_of_the_menu">Image Background of the Menu.</string>
    <string name="class_name">CS3443 Application Programming</string>
    <string name="utsa_roadrunners_logo">UTSA Roadrunners Logo</string>
    <string name="game_logo">Game Logo</string>
    <string name="exit">EXIT</string>
    <string name="team_credit">© 2023 Roadrunner Interactive</string>
    <string name="team_s_logo">Team\'s logo.</string>
    <string name="background_image">Background Image.</string>
    <string name="toggle_music">Toggle Music</string>
    <string name="toggle_sfx">Toggle SFX</string>
    <string name="choose_character">CHOOSE CHARACTER:</string>
    <string name="guide">Guide</string>
    <string name="rob">Rob</string>
    <string name="will">Will</string>
    <string name="megan">Megan</string>
    <string name="iker">Iker</string>
    <string name="joao">Joao</string>
    <string name="addy">Addy</string>
    <string name="trent">Trent</string>
    <string name="serena">Serena</string>
    <string name="choose_background">CHOOSE BACKGROUND:</string>
    <string name="grass">Grass</string>
    <string name="sand">Sand</string>
    <string name="snow">Snow</string>
    <string name="ocean">Ocean</string>
    <string name="cave">Cave</string>
    <string name="city">City</string>
    <string name="vol">Vol</string>
    <string name="characterless_game_logo">Characterless game logo.</string>
    <string name="rr_interactive_elongated_logo">RR Interactive elongated logo.</string>
</resources>