<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000C38">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/layout_background"
        android:contentDescription="@string/background_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/settings_header"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="@font/mainfont"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textColor="#83B6FF"
            android:textSize="36sp"
            tools:ignore="TextSizeCheck" />

        <ToggleButton
            android:id="@+id/music_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:alpha=".9"
            android:backgroundTint="#0C2E8E"
            android:fontFamily="@font/mainfont"
            android:textColor="#83B6FF"
            android:textOff="@string/toggle_music"
            android:textOn="@string/toggle_music"
            android:textSize="20sp"
            tools:ignore="TextSizeCheck" />

        <ToggleButton
            android:id="@+id/sound_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:alpha=".9"
            android:backgroundTint="#0C2E8E"
            android:fontFamily="@font/mainfont"
            android:textColor="#83B6FF"
            android:textOff="@string/toggle_sfx"
            android:textOn="@string/toggle_sfx"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/chr_header"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:fontFamily="@font/mainfont"
            android:gravity="center"
            android:text="@string/choose_character"
            android:textAlignment="center"
            android:textColor="#83B6FF"
            android:textSize="16sp" />

        <HorizontalScrollView
            android:layout_width="300sp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="VisualLintBounds">

                <Button
                    android:id="@+id/chr_button1"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:alpha=".75"
                    android:backgroundTint="#181245"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/guide"
                    android:textColor="#78d1f2"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/chr_button2"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:alpha=".75"
                    android:backgroundTint="#455daa"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/rob"
                    android:textColor="#FF8F8F"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/chr_button3"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:alpha=".75"
                    android:backgroundTint="#b8b8c0"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/will"
                    android:textColor="#302f2f"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/chr_button4"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#b71f40"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/megan"
                    android:textColor="#49030f"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/chr_button5"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#313050"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/iker"
                    android:textColor="#a1b9c9"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/chr_button6"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#141414"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/joao"
                    android:textColor="#eebf1c"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/chr_button7"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#a21d21"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/addy"
                    android:textColor="#fedf8b"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/chr_button8"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#9b1c1f"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/trent"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/chr_button9"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#ECEBEB"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/serena"
                    android:textColor="#171717"
                    android:textSize="16sp" />

            </LinearLayout>
        </HorizontalScrollView>

        <TextView
            android:id="@+id/bkg_header"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:fontFamily="@font/mainfont"
            android:gravity="center"
            android:text="@string/choose_background"
            android:textAlignment="center"
            android:textColor="#83B6FF"
            android:textSize="16sp" />

        <HorizontalScrollView
            android:layout_width="300sp"
            android:layout_height="60sp"
            android:layout_gravity="center_horizontal"
            android:scrollbars="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="VisualLintBounds">

                <Button
                    android:id="@+id/bkg_button1"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:alpha=".75"
                    android:backgroundTint="#036304"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/grass"
                    android:textColor="#ACFFA6"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/bkg_button2"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:alpha=".75"
                    android:backgroundTint="#d0c880"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/sand"
                    android:textColor="#7A6D4D"
                    android:textSize="16sp"
                    tools:ignore="TextContrastCheck" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent" />

                <Button
                    android:id="@+id/bkg_button3"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:alpha=".75"
                    android:backgroundTint="#d8e8f0"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/snow"
                    android:textColor="#387695"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="0" />

                <Button
                    android:id="@+id/bkg_button4"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#5878d8"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/ocean"
                    android:textColor="#08257C"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/bkg_button5"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#b8a088"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/cave"
                    android:textColor="#5E4B38"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/bkg_button6"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#c8c8c8"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/city"
                    android:textColor="#5C5C5C"
                    android:textSize="16sp" />

                <Space
                    android:layout_width="15sp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/bkg_button7"
                    android:layout_width="90dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:alpha=".75"
                    android:backgroundTint="#e08878"
                    android:fontFamily="@font/buttonfont"
                    android:text="@string/vol"
                    android:textColor="#752F23"
                    android:textSize="16sp" />

            </LinearLayout>
        </HorizontalScrollView>

        <Button
            android:id="@+id/return_button"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:alpha=".9"
            android:backgroundTint="#0C2E8E"
            android:fontFamily="@font/mainfont"
            android:text="@string/back"
            android:textColor="#83B6FF"
            android:textSize="20sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="140sp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="120sp"
                android:layout_gravity="center|center_horizontal"
                app:srcCompat="@drawable/main_menu_logo3"
                android:contentDescription="@string/characterless_game_logo" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="80sp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="250sp"
                android:layout_height="80sp"
                android:layout_gravity="center|center_horizontal"
                app:srcCompat="@drawable/team_logo"
                android:contentDescription="@string/rr_interactive_elongated_logo" />
        </FrameLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>