<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000C38">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/menu_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center|center_horizontal"
            android:layout_weight="1"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/layout_background"
            android:contentDescription="@string/image_background_of_the_menu" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50sp">

                <ImageView
                    android:id="@+id/utsa_logo"
                    android:layout_width="80sp"
                    android:layout_height="50sp"
                    app:srcCompat="@drawable/utsa_logo"
                    android:contentDescription="@string/utsa_roadrunners_logo" />

                <TextView
                    android:id="@+id/class_text"
                    android:layout_width="match_parent"
                    android:layout_height="50sp"
                    android:fontFamily="@font/mainfont"
                    android:gravity="center"
                    android:text="@string/class_name"
                    android:textColor="#83B6FF"
                    android:textSize="12sp"
                    tools:ignore="MissingConstraints" />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="25sp" />

            <ImageView
                android:id="@+id/title_logo"
                android:layout_width="match_parent"
                android:layout_height="275sp"
                android:layout_gravity="center|center_horizontal"
                app:srcCompat="@drawable/main_menu_logo"
                android:contentDescription="@string/game_logo" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <Button
                android:id="@+id/game_test_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha=".9"
                android:backgroundTint="#0C2E8E"
                android:backgroundTintMode="add"
                android:fontFamily="@font/mainfont"
                android:text="@string/start"
                android:textColor="#83B6FF"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <Button
                android:id="@+id/settings_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha=".9"
                android:backgroundTint="#0C2E8E"
                android:fontFamily="@font/mainfont"
                android:text="@string/settings"
                android:textColor="#83B6FF"
                android:textSize="20sp"
                tools:ignore="TextSizeCheck" />

            <!--suppress AndroidMissingOnClickHandler -->
            <Button
                android:id="@+id/credits_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha=".9"
                android:backgroundTint="#0C2E8E"
                android:backgroundTintMode="add"
                android:fontFamily="@font/mainfont"
                android:onClick="Credit"
                android:text="@string/credits"
                android:textColor="#83B6FF"
                android:textSize="20sp" />

            <!--suppress AndroidMissingOnClickHandler -->
            <Button
                android:id="@+id/exit_button"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:alpha=".9"
                android:backgroundTint="#0C2E8E"
                android:backgroundTintMode="add"
                android:fontFamily="@font/mainfont"
                android:onClick="Exit"
                android:text="@string/exit"
                android:textColor="#83B6FF"
                android:textSize="20sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="50sp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:fontFamily="@font/mainfont"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/team_credit"
                    android:textColor="#83B6FF"
                    android:textSize="14sp"
                    tools:ignore="MissingConstraints" />

            </TableRow>

            <Space
                android:layout_width="match_parent"
                android:layout_height="15sp" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                app:srcCompat="@drawable/team_logo2"
                android:contentDescription="@string/team_s_logo" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>